[gd_scene load_steps=8 format=3 uid="uid://brv51q227veyq"]

[ext_resource type="FontFile" uid="uid://vpxsj0e6x6lk" path="res://menu/shared/graphics/fonts/menu_font.ttf" id="1_g6n1v"]
[ext_resource type="Script" path="res://menu/lever_picker/base_custom_picker.gd" id="2_s5o6l"]
[ext_resource type="Texture2D" uid="uid://c3msrgw8yn1n4" path="res://menu/shared/graphics/buttons/menu_button_lvl_empty.png" id="3_lpsyv"]
[ext_resource type="Theme" uid="uid://ck7jhnw1ogkal" path="res://menu/shared/graphics/fonts/button_theme.tres" id="4_hbydh"]
[ext_resource type="Texture2D" uid="uid://c86rrp0hau4hr" path="res://menu/shared/graphics/buttons/menu_button_empty.png" id="5_8f25n"]
[ext_resource type="PackedScene" uid="uid://b7fyxc5vat0fl" path="res://menu/shared/graphics/background.tscn" id="6_3kvv3"]

[sub_resource type="Theme" id="Theme_ytt8h"]
default_font = ExtResource("1_g6n1v")
default_font_size = 64
dafault/base_type = &"control"
dafault/colors/font_color = Color(0, 0, 0, 1)
dafault/colors/font_disabled_color = Color(0, 0, 0, 1)
dafault/colors/font_focus_color = Color(0, 0, 0, 1)
dafault/colors/font_hover_color = Color(0, 0, 0, 1)
dafault/colors/font_hover_pressed_color = Color(0, 0, 0, 1)
dafault/colors/font_outline_color = Color(0, 0, 0, 1)
dafault/colors/font_pressed_color = Color(0, 0, 0, 1)
dafault/colors/icon_disabled_color = Color(0, 0, 0, 1)
dafault/colors/icon_focus_color = Color(0, 0, 0, 1)
dafault/colors/icon_hover_color = Color(0, 0, 0, 1)
dafault/colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
dafault/colors/icon_normal_color = Color(0, 0, 0, 1)
dafault/colors/icon_pressed_color = Color(0, 0, 0, 1)
dafault/font_sizes/default = 64
dafault/fonts/default = ExtResource("1_g6n1v")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BaseCustomPicker" type="MarginContainer" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_ytt8h")
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10
script = ExtResource("2_s5o6l")

[node name="VBoxContainer" type="VBoxContainer" parent="BaseCustomPicker"]
layout_mode = 2

[node name="ExitLevelPicker" type="Button" parent="BaseCustomPicker/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_g6n1v")
theme_override_font_sizes/font_size = 64
text = "Iks"
icon = ExtResource("3_lpsyv")
flat = true
icon_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="BaseCustomPicker/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Base" type="Button" parent="BaseCustomPicker/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme = ExtResource("4_hbydh")
text = "Base"
icon = ExtResource("5_8f25n")
flat = true
icon_alignment = 1

[node name="Custom" type="Button" parent="BaseCustomPicker/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
disabled = true
text = "Custom"
icon = ExtResource("5_8f25n")
flat = true
icon_alignment = 1

[node name="Background" parent="." instance=ExtResource("6_3kvv3")]

[connection signal="pressed" from="BaseCustomPicker/VBoxContainer/ExitLevelPicker" to="BaseCustomPicker" method="_on_exit_level_picker_pressed"]
[connection signal="pressed" from="BaseCustomPicker/VBoxContainer/HBoxContainer/Base" to="BaseCustomPicker" method="_on_base_pressed"]
[connection signal="pressed" from="BaseCustomPicker/VBoxContainer/HBoxContainer/Custom" to="BaseCustomPicker" method="_on_custom_pressed"]
